add VISLocalizationInterface for visual localization

--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -13,6 +13,9 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 cs_add_executable(cmu_navigation_interface cmu_navigation_interface.cpp)
 target_link_libraries(cmu_navigation_interface ${catkin_LIBRARIES})
 
+cs_add_executable(vis_navigation_interface vis_navigation_interface.cpp)
+target_link_libraries(vis_navigation_interface ${catkin_LIBRARIES})
+
 ########
 # TEST #
 ########
