--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <depend>sensor_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>pcl_ros</depend>
+  <depend>cv_bridge</depend>
 
   <!-- <depend>eigen_catkin</depend>
   <depend>glog_catkin</depend>
